src/global.css
/* ... */
.header-note {
  font-size  : 14px;
  word-break : break-word;
  white-space: break-spaces;
  text-align : left;
  align-self : self-start;
  padding-top: 10px;
}

.footer-note {
  font-size  : 12px;
  word-break : break-word;
  white-space: break-spaces;
  text-align : left;
  align-self : self-start;
  border-top : 1px dashed #D8DBE5;
  padding-top: 10px;
}

.box.popup,
.box.popup button,
.box.popup img {
  margin-top: 15px;
}

.confirm-cancel-line {
  align-self: flex-end;
}

.small {
  font-size  : 11px;
  font-weight: 400;
}

.hidden {
  display: none;
}

#max {
  display: none;
}

a#terms-of-use {
  color: blue;
}


input[type=checkbox][disabled]{
  outline:1px solid blue;
}

input#terms-of-use{
background-color:green;
}

input[type="checkbox"]#terms-of-use {
    display: none;
}

.disclaimer {
  margin-top: 10px;
}

.disclaimer label:before{
    background: green;
    border: 1px solid #035f8f;
    height: 18px;
    width: 18px;
    display: inline-block;
    cursor: pointer;
}
input[type="checkbox"]#terms-of-use + label:before {
    content: '';
    background: blue;
    border-color: blue;
    color: blue;
    font-size: 15px;
    line-height: 15px;
    text-align: center;
}

input[type="checkbox"]#terms-of-use:disabled + label:before {
    border-color: #ccc;
    color: blue;
    background: #ddd;
}

input[type="checkbox"]#terms-of-use:checked + label:before {
    content: '✓';
}

.max {
  color: blue;
  font-size: 14px;
}

#near-balance a {
  display: inline-block
}

#stake-form-not-connected{
  max-width:  320px;
  margin: 0 auto;
}

